%%{init: {'theme':'neutral'}}%%
classDiagram

    class Sorter {
        -sortStrategy SortStrategy
        +Sorter()
        +setStrategy(SortStrategy)
        +sort(int[]) BenchmarkMetric
    }

    class SortStrategy {
        <<interface>>
        +name()* String
        +sort(int[])* BenchmarkMetric
        +swap(int[], int, int)* void
    }

    class ConcreteSortStrategy {
        -Benchmarker benchmarker
        +ConcreteSortStrategy(Benchmarker)
        +sort(int[]) BenchmarkMetric
    }

    note for ConcreteSortStrategy "May have private sorting helpers."
    Sorter "1" *-- "1" SortStrategy
    SortStrategy <|.. ConcreteSortStrategy



